<resources>
    <string name="app_name">ToDo List</string>
    <string name="title_todo_details">Note Details</string>

    <string name="no_internet_connection">No internet connection</string>
    <string name="retry">Retry</string>

    <string name="label_note_id">Note ID</string>
    <string name="label_user_id">User ID</string>
    <string name="label_note_title">Title</string>
    <string name="label_note_due_on">Due On</string>
    <string name="label_note_status">Status</string>

</resources>