<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".noteslist.view.NotesListActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <!--  NOTE TITLE  -->
    <TextView
        android:id="@+id/tv_note_title_label"
        style="@style/tv_note_details_label"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/label_note_title"
        />

    <TextView
        android:id="@+id/tv_note_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_note_title_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/tv_note_details_content"
        />


    <!--  NOTE ID  -->
    <TextView
        android:id="@+id/tv_note_id_label"
        style="@style/tv_note_details_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_note_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/label_note_id"
        />

    <TextView
        android:id="@+id/tv_note_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_note_id_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/tv_note_details_content"
        />


    <!--  NOTE USER ID  -->
    <TextView
        android:id="@+id/tv_note_user_id_label"
        style="@style/tv_note_details_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_note_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/label_user_id"
        />

    <TextView
        android:id="@+id/tv_note_user_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_note_user_id_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/tv_note_details_content"
        />


    <!--  NOTE STATUS  -->
    <TextView
        android:id="@+id/tv_note_status_label"
        style="@style/tv_note_details_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_note_user_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/label_note_status"
        />

    <TextView
        android:id="@+id/tv_note_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_note_status_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/tv_note_details_content"
        />


    <!--  NOTE DUE ON  -->
    <TextView
        android:id="@+id/tv_note_due_on_label"
        style="@style/tv_note_details_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_note_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/label_note_due_on"
        />

    <TextView
        android:id="@+id/tv_note_due_on"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_note_due_on_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/tv_note_details_content"
        />

</androidx.constraintlayout.widget.ConstraintLayout>